# a_vkr

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: README.md  TifMaker.py  ai.py  config.py  export_lama.py  main.py
app/networks/: _deeplab.py  modeling.py  unet.py  utils.py
app/networks/backbone/: datasetmaker.py  mobilenetv2.c  mobilenetv2.py  resnet.c  resnet.py  test.py
app/templates/: index.html
nginx/: default.conf
