[project]
name = "a-vkr"
version = "0.1.0"
description = "ВКР — Система обработки изображений на основе нейронной сети"
authors = [
    {name = "vsyroc", email = "vsyroc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.136.3,<0.137.0",
    "uvicorn[standard]>=0.48.0,<0.49.0",
    "python-multipart>=0.0.29,<0.0.30",
    "jinja2>=3.1.6,<4.0.0",
    "loguru>=0.7.0",
    "torch>=2.0.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "pillow>=10.0.0,<12.0.0",
    "rasterio>=1.3.0,<2.0.0",
    "opencv-python-headless>=4.9.0,<5.0.0",
    "albumentations>=1.4.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"